--- a/index.html
+++ b/index.html
@@ -25,14 +25,10 @@
         <i class="mdui-icon mdui-fab-opened material-icons">mode_edit</i>
       </button>
       <div class="mdui-fab-dial" style="height: 0px;">
-        <button class="mdui-fab mdui-fab-mini mdui-ripple mdui-color-black" onclick="goBack()" style="transition-delay: 0ms;"><i class="mdui-icon material-icons">backspace</i></button>
-		<a href="https://tuanct-lab.github.io/IZM-Level-Maker/">
-        <button class="mdui-fab mdui-fab-mini mdui-ripple mdui-color-white" style="transition-delay: 15ms;"><i class="mdui-icon material-icons">home</i></button>
-		</a>
-				<a href="https://forms.gle/2GCqXoeK1Yvw7BFcA">
+				<a href="https://forms.gle/AZ6An6dpigKWeKfN7">
         <button class="mdui-fab mdui-fab-mini mdui-ripple mdui-color-blue" style="transition-delay: 30ms;"><i class="mdui-icon material-icons">cloud_upload</i></button>
 </a>		
-		<a href="https://forms.gle/uZwSMSCZDjLUPaHg6">
+		<a href="https://forms.gle/f8gjpnqySwvmy2jc7">
         <button class="mdui-fab mdui-fab-mini mdui-ripple mdui-color-red" style="transition-delay: 45ms;"><i class="mdui-icon material-icons">report_problem</i></button>
 </a>    
 	</div>
