--- a/downloader.html
+++ b/downloader.html
@@ -162,6 +162,8 @@ function goBack() {
 					<p>Hinhtron.pas</p></td><td><p>Mã nguồn để tham khảo code</p></td><td><p>20-09-29</p></td><td><a href="https://drive.google.com/file/d/17nZGe3ilve9iV7Bh_I43_OP2TIRlbEkQ/view?usp=sharing" download="mod.env.json"><button class="mdui-btn mdui-btn-icon mdui-ripple"><i class="mdui-icon material-icons">file_download</i></button></a></td></tr></tbody>
 				<tbody id="download_table_body"><tr><td><p>Duc.docx</p></td><td><p>Bài thuyết trình anh Dục</p></td><td><p>20-09-23</p></td><td><a href="https://drive.google.com/file/d/1ud1743g9Vpm3L2Pxr8UETCPDC4kSf59z/view?usp=sharing" download="太極-Loader.exe">
 					<button class="mdui-btn mdui-btn-icon mdui-ripple"><i class="mdui-icon material-icons">file_download</i>
+					<tbody id="download_table_body"><tr><td><p>Hai.docx</p></td><td><p>Bài thuyết trình anh Hải</p></td><td><p>20-09-23</p></td><td><a href="https://drive.google.com/file/d/1a_Gr9kLMroyK8RPuUMJKBiMWEaTALOCZ/view?usp=sharing" download="太極-Loader.exe">
+					<button class="mdui-btn mdui-btn-icon mdui-ripple"><i class="mdui-icon material-icons">file_download</i>
 				</table>
 			</div>
 
