--- a/Shub.html
+++ b/Shub.html
@@ -163,7 +163,7 @@ body {font-family: Arial;}
 <a style="font-size:20px">
   <p style="color:red">Download Đề</p>
 <p> File URL:
-<input class="mdui-btn mdui-btn-dense mdui-textfiled" type="text" id="task" value="">
+<input class="" type="text" id="task" value="">
 </p><p>
 </a>
 <button class="mdui-btn mdui-btn-dense mdui-textfiled" onclick="myFunction()">Lấy link<i class="mdui-icon material-icons">file_download</i></button>
